# wasmbed

./: .editorconfig  .rustfmt.toml  CONTRIBUTORS  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: test.yaml
certificates/client/ca/: ca.der  ca.key
certificates/client/issued_cert/: cert.der  cert.key
certificates/server/ca/: ca.der  ca.key
certificates/server/issued_cert/: cert.der  cert.key
crates/certificates/ca/server/: ca.der  ca.key
crates/protocol/: Cargo.toml
crates/protocol-tool/: Cargo.toml
crates/protocol/src/: decode.rs  encode.rs
crates/virtual-kubelet-client/: Cargo.toml
crates/virtual-kubelet-client/src/: decode.rs  encode.rs  lib.rs  types.rs
crates/virtual-kubelet-client/tests/: encode_decode.rs
crates/wasmbed-cert/: Cargo.toml
crates/wasmbed-cert-tool/: Cargo.toml
crates/wasmbed-cert-tool/src/: main.rs
crates/wasmbed-cert/src/: lib.rs
crates/wasmbed-firmware-esp32c3/: Cargo.toml
crates/wasmbed-firmware-esp32c3-qemu/: Cargo.toml  run.sh
crates/wasmbed-firmware-esp32c3-qemu/.cargo/: config.toml
crates/wasmbed-firmware-esp32c3-qemu/src/: main.rs
crates/wasmbed-firmware-esp32c3/.cargo/: config.toml
crates/wasmbed-firmware-esp32c3/src/: main.rs
crates/wasmbed-firmware-hifive1-qemu/: Cargo.toml  run.sh
crates/wasmbed-firmware-hifive1-qemu/.cargo/: config.toml
crates/wasmbed-firmware-hifive1-qemu/src/: main.rs
crates/wasmbed-gateway/: Cargo.toml
crates/wasmbed-gateway-test-client/: Cargo.toml
crates/wasmbed-gateway-test-client/src/: main.rs
crates/wasmbed-gateway/src/: kube_handler.rs  lib.rs  main.rs  pool.rs  server.rs  simple_server.rs  test_pki.rs
crates/wasmbed-gateway/test-certs/ca/: ca.pem
crates/wasmbed-gateway/test-certs/client/: client-cert.pem  client-key.pem
crates/wasmbed-gateway/tests/: tests.rs
crates/wasmbed-k8s-client/: Cargo.toml
crates/wasmbed-k8s-client/src/: lib.rs
crates/wasmbed-k8s-controller/: Cargo.toml
crates/wasmbed-k8s-controller/src/: main.rs
crates/wasmbed-k8s-resource/: Cargo.toml
crates/wasmbed-k8s-resource-tool/: Cargo.toml
crates/wasmbed-k8s-resource-tool/src/: main.rs
crates/wasmbed-k8s-resource/src/: device.rs  device_client.rs  lib.rs
crates/wasmbed-operator/: Cargo.toml
crates/wasmbed-operator/src/: application.rs  device.rs  gateway.rs  lib.rs  main.rs
crates/wasmbed-protocol/: Cargo.toml
crates/wasmbed-protocol-client/: Cargo.toml
crates/wasmbed-protocol-client/src/: lib.rs
crates/wasmbed-protocol-server/: Cargo.toml
crates/wasmbed-protocol-server/src/: lib.rs
crates/wasmbed-protocol-tool/: Cargo.toml
crates/wasmbed-protocol-tool/src/: main.rs
crates/wasmbed-protocol/src/: cbor.rs  lib.rs  types.rs
crates/wasmbed-protocol/tests/: encode_decode.rs
crates/wasmbed-test-utils/: Cargo.toml
crates/wasmbed-test-utils/src/: lib.rs  minicbor.rs
crates/wasmbed-types/: Cargo.toml
crates/wasmbed-types/src/: cbor.rs  cert.rs  k8s.rs  lib.rs  schemars.rs  serde.rs  types.rs
kubelet-client/: Cargo.toml
kubelet-client/src/: decode.rs  encode.rs  types.rs
kubelet-client/tests/: encode_decode.rs
resources/dev-certs/: README.md  client-0.der  client-0.key  client-ca.der  client-ca.key  server-0.der  server-0.key  server-ca.der  server-ca.key
resources/diagrams/: Makefile  README.md  application-deployment-workflow.puml  architecture.puml  device-connection-workflow.puml  device-enrollment-workflow.puml
resources/k3d/: README.md  config.yaml
resources/k8s/: 000-namespace.yaml  100-service-account-gateway.yaml  101-cluster-role-gateway-device-access.yaml  102-cluster-rolebinding-gateway.yaml  110-service-gateway.yaml  111-statefulset-gateway.yaml  README.md
tools/protocol-tool/: Cargo.toml
tools/protocol-tool/src/: main.rs
tools/virtual-kubelet-cbor-inspect/: Cargo.toml
tools/virtual-kubelet-cbor-inspect/src/: main.rs
