[workspace]
resolver = "2"
members = [
    "crates/wasmbed-operator",
    "crates/wasmbed-protocol",
    "crates/wasmbed-protocol-tool",
    "crates/wasmbed-types",
]

[workspace.package]
version = "0.0.1"
authors = [ "Tancredi Orlando <tancredi.orlando@gmail.com>" ]
edition = "2024"
repository = "https://github.com/turlando/wasmed"
license = "AGPL-3.0"
