[package]
name = "kubelet-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]

[dependencies.minicbor]
version = "0.25.1"
default-features = false

[dependencies.uuid]
version = "1.13.2"
default-features = false
features = [ "v4" ]

[dev-dependencies]

[dev-dependencies.minicbor]
version = "*"
features = [ "alloc" ]
