[package]
name = "wasmbed-protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]

[dependencies.minicbor]
version = "0.26.0"
default-features = false

[dependencies.uuid]
version = "1.14.0"
default-features = false
features = [ "v4" ]

[dev-dependencies]

[dev-dependencies.minicbor]
version = "*"
features = [ "alloc" ]
