[package]
name = "wasmbed-protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]

[dependencies.minicbor]
version = "0.26.2"
default-features = false

[dependencies.uuid]
version = "1.16.0"
default-features = false
features = [ "v4" ]

[dev-dependencies]

[dev-dependencies.minicbor]
version = "0.26.2"
features = [ "alloc" ]
