[package]
name = "wasmbed-gateway-test-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.98"
rustls = "0.23.28"
tokio-rustls = "0.26.2"

[dependencies.clap]
version = "4.5.40"
features = [ "derive" ]

[dependencies.rustls-pki-types]
version = "1.12.0"
default-features = false

[dependencies.wasmbed-cert]
path = "../wasmbed-cert"

[dependencies.wasmbed-types]
path = "../wasmbed-types"

[dependencies.tokio]
version = "1.45.1"
features = [ "macros", "rt-multi-thread", "net" ]
