[package]
name = "wasmbed-gateway"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ctrlc = "3.4.5"
rustls = { version = "0.23.25", default-features = true, features = ["std"] }
rcgen = { version = "0.13", features = ["pem", "aws_lc_rs"], default-features = false }
wasmbed-protocol = {path = "../wasmbed-protocol"}
minicbor = { version = "0.26.4", features = ["alloc"] }
kube = {version = "0.99.0" }
tokio-rustls = {version = "0.26.2",default-features = true}
tokio = { version = "1", features = ["full"] }
k8s-openapi = {version = "0.24.0",features = [ "v1_32" ]}

[lints]
workspace = true
