[package]
name = "wasmbed-gateway"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.98"
rustls-pki-types = "1.12.0"
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.clap]
version = "4.5.40"
features = [ "derive", "env" ]

[dependencies.kube]
version = "1.1.0"
default-features = false
features = [ "client", "rustls-tls" ]

[dependencies.wasmbed-cert]
path = "../wasmbed-cert"

[dependencies.wasmbed-k8s-resource]
path = "../wasmbed-k8s-resource"
features = [ "client" ]

[dependencies.wasmbed-protocol]
path = "../wasmbed-protocol"

[dependencies.wasmbed-protocol-server]
path = "../wasmbed-protocol-server"

[dependencies.wasmbed-types]
path = "../wasmbed-types"
features = [ "k8s" ]

[dependencies.tokio]
version = "1.45.1"
features = [ "rt-multi-thread", "signal" ]

[lints]
workspace = true
