[package]
name = "wasmbed-k8s-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]

[lints]
workspace = true

[dependencies.k8s-openapi]
version = "0.25.0"
features = [ "v1_32" ]

[dependencies.kube]
version = "1.1.0"
default-features = false
features = [ "derive" ]

[dependencies.wasmbed-k8s-resource]
path = "../wasmbed-k8s-resource"
features = [ "serde", "schemars", "k8s" ]

[dependencies.wasmbed-types]
path = "../wasmbed-types"
features = [ "serde", "schemars", "k8s" ]
