[package]
name = "wasmbed-k8s-resource"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde_json = "1.0.140"

[dependencies.chrono]
version = "0.4.41"
default-features = false
features = [ "std" ]

[dependencies.k8s-openapi]
version = "0.25.0"
features = [ "v1_32" ]

[dependencies.kube]
version = "1.1.0"
default-features = false
features = [ "derive" ]

[dependencies.schemars]
version = "0.8.22"
features = [ "chrono" ]

[dependencies.serde]
version = "1.0.219"
features = [ "derive" ]

[dependencies.wasmbed-types]
path = "../wasmbed-types"
features = [ "serde", "schemars" ]
