[package]
name = "wasmbed-operator"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
schemars = "0.8.22"
serde_json = "1.0.140"
serde_yaml = "0.9.34"

[dependencies.clap]
version = "4.5.40"
features = [ "derive" ]

[dependencies.k8s-openapi]
version = "0.25.0"
features = [ "v1_32" ]

[dependencies.kube]
version = "1.1.0"
features = [ "derive", "runtime" ]

[dependencies.serde]
version = "1.0.219"
features = [ "derive" ]

[dependencies.tokio]
version = "1.45.1"
features = [ "macros", "rt" ]

[dependencies.wasmbed-types]
path = "../wasmbed-types"
features = [ "serde", "schemars" ]
