[package]
name = "wasmbed-protocol-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
embassy-time = { version = "0.4", default-features = false }
embassy-net = { version = "0.6", features = ["dhcpv4", "dns", "tcp", "udp"] }
embedded-io-async = { version = "0.6", default-features = false }
embedded-io-adapters= { version = "0.6", default-features = false }
embedded-tls = { version = "0.17", default-features = true}
embedded-nal-async = "0.7.1"  

heapless = { version = "0.8", default-features = false }

rand_core = { version = "0.6", default-features = false }
static_cell = "2.0"

[dev-dependencies]
embassy-executor = "0.5"
static_cell = "2.0"

[dependencies.wasmbed-cert]
path = "../wasmbed-cert"


[lints]
workspace = true
