[package]
name = "wasmbed-protocol-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true



[dependencies]
embassy-net = { version = "0.6", default-features = false, features = ["dhcpv4", "dns", "tcp", "udp"] }
embedded-tls = { version = "0.17", default-features = false}   

rand_core = { version = "0.6.4", default-features = false }
static_cell = { version = "2.1.0", default-features = false }
heapless = { version = "0.8",  default-features = false }

[dependencies.minicbor]
version = "1.0.0"
default-features = false
features = [ "alloc" ]


[dependencies.wasmbed-protocol]
path = "../wasmbed-protocol"



[lints]
workspace = true
