[package]
name = "wasmbed-protocol-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
futures = "0.3.31"
rustls = "0.23.28"
tokio-rustls = "0.26.2"
rustls-webpki = "0.103.3"
tokio-util = "0.7.15"
tracing = "0.1.41"

[dependencies.derive_more]
version = "2.0.1"
default-features = false
features = [ "display", "error" ]

[dependencies.minicbor]
version = "1.0.0"
default-features = false
features = [ "alloc" ]

[dependencies.rustls-pki-types]
version = "1.12.0"
default-features = false

[dependencies.tokio]
version = "1.45.1"
features = [ "io-util", "macros", "net", "rt", "time", "sync" ]

[dependencies.wasmbed-cert]
path = "../wasmbed-cert"

[dependencies.wasmbed-protocol]
path = "../wasmbed-protocol"

[dependencies.wasmbed-types]
path = "../wasmbed-types"
features = [ "base64", "cert", "x509" ]
