[package]
name = "wasmbed-protocol-tool"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
hex = "0.4.3"

[dependencies.clap]
version = "4.5.32"
features = [ "derive" ]

[dependencies.minicbor]
version = "0.26.2"
default-features = false

[dependencies.wasmbed-protocol]
path = "../wasmbed-protocol"
