[package]
name = "wasmbed-protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]

[dependencies.minicbor]
version = "0.26.3"
default-features = false

[dependencies.uuid]
version = "1.16.0"
default-features = false
features = [ "v4" ]

[dev-dependencies]

[dev-dependencies.wasmbed-test-utils]
path = "../wasmbed-test-utils"
features = [ "minicbor" ]
