[package]
name = "wasmbed-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]

[dependencies.minicbor]
version = "1.0.0"
default-features = false
features = [ "alloc", "derive" ]

[dependencies.derive_more]
version = "2.0.1"
default-features = false
features = [ "display", "error" ]

[dev-dependencies]

[dev-dependencies.wasmbed-test-utils]
path = "../wasmbed-test-utils"
features = [ "minicbor" ]
