[package]
name = "wasmbed-test-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
minicbor = [ "dep:minicbor" ]

[dependencies]

[dependencies.minicbor]
version = "1.0.0"
features = [ "alloc" ]
optional = true
