[package]
name = "wasmbed-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
cert = [ "dep:rustls-pki-types", "dep:x509-parser" ]
k8s = [ "serde", "schemars", "dep:k8s-openapi" ]
schemars = [ "serde", "dep:schemars" ]
serde = [ "dep:serde", "dep:base64" ]

[dependencies]

[dependencies.base64]
version = "0.22.1"
default-features = false
optional = true

[dependencies.k8s-openapi]
version = "0.25.0"
features = [ "schemars", "v1_32" ]
optional = true

[dependencies.rustls-pki-types]
version = "1.12.0"
default-features = false
optional = true

[dependencies.schemars]
version = "0.8.22"
optional = true
features = [ "uuid1" ]

[dependencies.serde]
version = "1.0.219"
features = [ "derive" ]
optional = true

[dependencies.uuid]
version = "1.17.0"
default-features = false
features = [ "v4" ]

[dependencies.x509-parser]
version = "0.17.0"
optional = true
