[package]
name = "wasmbed-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
alloc = [ "rustls-pki-types/alloc" ]
cert = [ "dep:rustls-pki-types", "dep:x509-parser" ]
k8s = [ "dep:k8s-openapi" ]
schemars = [ "std", "dep:schemars" ]
serde = [ "dep:serde", "dep:base64" ]
std = [ "alloc" ]

[dependencies]

[dependencies.base64]
version = "0.22.1"
default-features = false
optional = true

[dependencies.k8s-openapi]
version = "0.25.0"
default-features = false
features = [ "schemars", "v1_33" ]
optional = true

[dependencies.rustls-pki-types]
version = "1.12.0"
default-features = false
optional = true

[dependencies.schemars]
version = "0.8.22"
default-features = false
features = [ "derive" ]
optional = true

[dependencies.serde]
version = "1.0.219"
default-features = false
features = [ "derive" ]
optional = true

[dependencies.x509-parser]
version = "0.17.0"
optional = true
