[package]
name = "wasmbed-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
k8s = [ "std", "dep:k8s-openapi", "dep:schemars", "dep:serde" ]
cert = [ "dep:rustls-pki-types" ]

alloc = [ "rustls-pki-types/alloc" ]
std = [ "alloc" ]

base64 = [ "alloc", "dep:base64" ]
schemars = [ "alloc", "dep:schemars" ]
serde = [ "dep:serde", "dep:base64" ]
x509 = [ "dep:x509-cert" ]

[dependencies]

[dependencies.base64]
version = "0.22.1"
default-features = false
features = [ "alloc" ]
optional = true

[dependencies.derive_more]
version = "2.0.1"
default-features = false
features = [ "display" ]

[dependencies.k8s-openapi]
version = "0.25.0"
default-features = false
features = [ "schemars", "v1_33" ]
optional = true

[dependencies.rustls-pki-types]
version = "1.12.0"
default-features = false
optional = true

[dependencies.schemars]
version = "0.8.22"
default-features = false
features = [ "derive" ]
optional = true

[dependencies.serde]
version = "1.0.219"
default-features = false
features = [ "derive" ]
optional = true

[dependencies.x509-cert]
version = "0.2.5"
optional = true
