[package]
name = "virtual-kubelet-cbor-inspect"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
hex = "0.4.3"

[dependencies.virtual-kubelet-client]
path = "../../crates/virtual-kubelet-client"

[dependencies.clap]
version = "4.5.30"
features = [ "derive" ]
